Tedarikçide puan kapanacak Firma tanımlamada @gamail eklenecek Tedarikçi tanımlama listesine email adresi telefon2 yerine eklenecek Ekap formu eklendi

--- a/IhalematikPro/Forms/Genel/frm_Anaform.resx
+++ b/IhalematikPro/Forms/Genel/frm_Anaform.resx
@@ -5512,6 +5512,51 @@
         n2OMcwSKc4U9Na2whXlwFKxlytdBM/8r7CU9n3jyP+4GywuiooToAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="barButtonItem46.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAAAgCAYAAACinX6EAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4gMcAhgSuBG/oQAAABl0RVh0
+        U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAi8SURBVGhD5dgJcFXVHcfxK2G3oSahKAhOxVIV
+        KojaIkvIAtSp01KnpWNpBa1llOl0UadTW1kctNapM1AZCYthsxBCtpKwZWFJAogYqiQQCCFgoYHsgQAJ
+        SV7y3u33d9+5+Mw8QOxEWzkzn7mX++479/z/73/OucEqTVk/uGxTekbZ5oyKY/9IefrI2ndCjiYnWjdM
+        O5aetrBkzeq24qVx9rENaaWlqUlDS9OSrZLUJHPHl7yRgI92T/mJnT1suH04fllr2eb0mcc3p1uHUm6Q
+        BBxNWteafd8Ie0PPm+0Dr79m/ztr06uHcrKt6vQbpwLK90ydamePfNA+vvLtloqt6TOKMtIte8cNkoDS
+        9LT4koQ1vpPxcXZpWmLjs28mPlG3fa1lPZ9sWXNugCSUJK+/t3xjysbizEzPM8u3tXSblVRqzU581pqb
+        3MtJgGP9lzcZ9q8sq2BDxh0/3NmQ03/t6dbur2X6rFnrzhFwPO5FD2tOgklEB4HtWp9/yjZp0qSgOq2t
+        2riHLNjW2N12/MhN51vDFh1o6vZKhk0VtBFEGV7BA4hATwQP1i8EqpybnH9/hhYseOm8VmhbjxbYVmy+
+        vWT8No934Krj5/q8ua895OVU25qVaBNIOyqRjOfxCIZjCO4ydD4Cj2MClAjzgOtrJuCu+DZiEaprndom
+        7LKtmDzfgphcn+dbqbXnwxcfbAxdsMfuMjdZlaAkBGrCR3gf+cY+KEl78RD8FfEZmoJFb6xHDUboWqc2
+        k4B5uDgms/nSbctL68LjitpD5++6UhKCUfAP4+MpEaQpmE+hF9aiHg+Ya53CabF5PiXgBZyN2t7ePDS5
+        uiEsrvB8xOIiO3T+bruLMx3WBQva9R6+g6sGrxZsEEG4CajDSHPN1QM9O1y7kpAg1z7BaQQuT8fk++qi
+        drSfH515yUMV1IQvOuBREvr8ba/ddd6GKyVhP0bheoK/A3/BOqQg2Rzfwc9xMzomoAueRBwGIMKcp0Lf
+        d/v4O56A1pGfQve8Afc5shwT4R+YScBjqIna6a0dn9PmHZZaQxUU1ZMEn5Jwy8ICu/ufN/ungzslZicd
+        5jzKmhWwTV6l6YHGc2hGGXZgJ3bhAoqgoJWMwARowKV4Gd0wBDnIR66RB02bQ7gbL6EdR+A+Zy/07O34
+        ujMwk4DRKEdlZI6ndUxWc9vtq45XhS0qbAxf9KGtJJAMu/cbO5kSKbb1UsIRRFqhdDA70WKaOH1drfFA
+        6Y7V8GEa+uJWDEQSlITJWAkl4H5oIdyH1/EVqB9NBVXC7eYog6DENUIJ+y28eAF6Tj/cCfVVhShnYCYB
+        96DMScB2z3mS4Ls//WxjxNLiivC4whYFz9FJxFcX7vOyS7zV7+2j/fotL+vad9kRq++yw0Yxjjj9dmw8
+        0B24yrsVMeaaS+Wqwf8YK6BB6ly/3PtQktx7VeKjMNVQuT8OVUITHoES0AZNCfd7er4qRzvMBGdg0SQA
+        gwh+P6qid7bXjM1u8UbmtHrvSiivC1t8qJLgW1UJ4XEH2gmwnsBP9osv3cT5dAwh+D59lx11gvfzJySw
+        BQxgDfTL/AFKggartgWX4CZA1fABVLJnMAZuP0NRgmocRLE5nsVFBCZAleZ+Twuoyl8JiHUGZhIQRvCZ
+        qMWZcTme5shsj3f01ibPgJVlFWFLDlVFxBVdilhSXE+A5ahCE85iD/6KyRhB4Hcj4hoJsKHBn8Qp419Q
+        II9CC5Xu0a+fbs7joSmkfpQkBaqqGY4HofVC7w8dK2A6rpmA7gS+AudQPn5He8O4rBav3g5Hpp9ToOUR
+        Sw+f4XgaOrrn1Wg0dP4hUgk+hqPTv9vMAAIrYB4ewxTjB/getEtoLqsaFIh+eU0HJSwa6udnUAK0oLp9
+        a6dYhOtLQEye8yIkc00CTkfneqvGZbd40D4+x+O9J7myIWxJMb+8k4RASkIllKSL0LSYgUFw+ndbwAAS
+        oDXADaYjd52ohX5d7efLoCpQYlQFmvcdE6D7giUg2Bqgvic6AwtIwFNwpoCSMH5b24WxVEFkdqt3XHZr
+        +51rT9UxFVT+bvAVuAAFnodf4g5cXgsCmxmAtjCVt3aBGfgatHprgdOK/k1otVagGqR2AX0v0vxbO4Mq
+        4kdQAvQ+ofv1fVVOGgIToEqbA92jnUL9a6utRKQZmn8nYBpEK3BU6kgVVDMN2kiCUwVjeEEauPpEjb8S
+        nLmvX/0DPActhCEcgwavxgNdz0Cr/QkU4J+GFryt0HzWi0sDHoa+o78P3HVBLzu6R+vHaQT2oSRp8dRU
+        +jWUgHJoF9mPA9DUysCtZmiXt8KBKEQNqAL7dOS2toskwEcinCSM2tLoGbCirDb0rcKDt8QdnMe6wIJ3
+        pMfHgZfgk4uf23igKwxamV/EH81R/oSZ6A9ta9q/VR3u97Ty69pvoF/z+3D7EH2mtUHTYjB+B02BBebc
+        vU/nw2BGRjMLYR8CT8flaUAVVFL+HiVhbFazT0ngVblu+Ibaab0XFnTX98KX+vf+YL96x6aHGtrHNZeD
+        uQmaKjrXwuZ+R9d1TfNY1zXnA78nbr+6XwlRAvQK3fFe9WVGRYvO81qReZ4uBP0qtBAqAU4S+PugnsWw
+        LXKbpymaV+UJu3zV333X3jJxt/3Q2KwGt3pMT1dveujn6PfQWqMEBPvcjIqmBJhAJqMKFXCTcIbA/dMi
+        39brsq41xub73uM4CV1MBZnevtgWEKASoO3uKf37mi06lyByfYMJqAhmHTD8gWuBdK/p/AKKMS0qz9uD
+        43VVQ2c1E7xKXAvlL6C1w3x6lWYGrxeiBJxFYMDB6HNNl1PQf6j0B32omrym18+/Kdhgrtn8g3c8iXoo
+        wEAKWlukpogqpJ6yb+DoRROyMZ3gWUy9TAnb9PzFtP8mAd/AYbTgEprNURSoKEGaFkdRgFxkYQnui/0f
+        SMB1N3/pajGzQzjOxwm8C/2RtMpce5FffSbHKYjEMN4X9Jdkf67fxlF6/X8kwLL+AyUJtOAEOp76AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="lblCompanyName.Appearance.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
